@@ -177,7 +177,7 @@ placePlayerBases({
 		"outerTerrain": tRoadWild,
 		"innerTerrain": tRoad
 	},
-	"Chicken": {
+	"StartingAnimal": {
 			"template": randBool() ? oPig : oSheep,
 			"count": randIntInclusive(5,20)
 	},
