@@ -177,7 +177,7 @@ let genMapFertWithMountain = function (isMountain)
                 "outerTerrain": tRoadWild,
                 "innerTerrain": tRoad
             },
-            "Chicken": {},
+            "StartingAnimal": {},
             "Berries":
             {
                 "template": oFruitBush
