@@ -192,7 +192,7 @@ placePlayerBases(
 		"outerTerrain": tRoadWild,
 		"innerTerrain": tRoad
 	},
-	"Chicken":
+	"StartingAnimal":
 	{},
 	"Berries":
 	{
