@@ -1,6 +1,7 @@
 2022-06-18
 
     * bump version to 0.25999.0; change dep req to a26
+    * replace "Chicken" with "StartingAnimal" in random maps
 
 2022-06-09
 
